--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#2ECC71"
-backgroundColor = "#F4F9F4"
-secondaryBackgroundColor = "#DFF5E1"
-textColor = "#1C1C1C"
+primaryColor = "#81C784"  
+backgroundColor = "#1B1E1B"
+secondaryBackgroundColor = "#2E2F2E"
+textColor = "#E0F2F1"
 font = "sans serif"
